# autodi

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CORE_CONCEPTS.md  FRAMEWORKS.md  LICENSE  Makefile  PERFORMANCE.md  README.md  TESTING.md  pyproject.toml  setup.py
autodi/: __init__.py  container.py  exceptions.py  scopes.py  types.py
autodi/config/: __init__.py  config.py
autodi/extensions/: fastapi.py
autodi/utils/: __init__.py  plugins.py
examples/: aiogram_example.py  async_services.py  basic_usage.py  fastapi_example.py  lifecycle_hooks_example.py  singleton_factory.py
