[project]
name = "autodi"
version = "1.0.0"
description = "AutoDI is a modern, type-friendly dependency injection container that simplifies dependency management in Python applications while keeping your code clean and maintainable."
authors = [
    { name = "C0dwiz", email = "codwiz@yandex.ru" },
]
maintainers = [
    { name = "C0dwiz", email = "codwiz@yandex.ru" },
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
