[project]
name = "autodi"
version = "1.0.0"
description = "AutoDI is a modern, type-friendly dependency injection container that simplifies dependency management in Python applications while keeping your code clean and maintainable."
authors = [
    { name = "C0dwiz", email = "codwiz@yandex.ru" },
]
maintainers = [
    { name = "C0dwiz", email = "codwiz@yandex.ru" },
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.12.7"
mypy = "^1.17.1"
pytest = "^8.4.1"
pre-commit = "^4.2.0"

